--- a/src/App.css
+++ b/src/App.css
@@ -6,13 +6,13 @@
   padding-bottom: 1em;
 }
 
-.roi-tables {
+/* .roi-tables {
   padding-top: 2em;
   height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-}
+} */
 
 .expenses-table, .revenue-table, .totals-table {
   margin-bottom: 3em;
